[tool.poetry]
name = "scribbplyscrobbply"
version = "1.0.1"
description = "A Python script to process your spotify extended streaming history into a Last.fm Scrubbler-friendly JSON file"
authors = ["Mark Joshwel <mark@joshwel.co>"]
license = "Unlicense"
packages = [
    { include = "scribbplyscrobbply.py" },
]
repository = "https://github.com/markjoshwel/scribbplyscrobbply"
keywords = ["scrobble", "last.fm", "spotify"]

[tool.poetry.scripts]
scribbplyscrobbply = 'scribbplyscrobbply:cli'

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
mypy = "^1.0.1"
isort = "^5.12.0"
flet = "^0.4.2"

[tool.black]
line-length = 90

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
